# pasyn-sqlite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  implementations.py  multiprocess_benchmark.py  run_benchmarks.py
pasyn-await-poc/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_await.py
pasyn-await-poc/src/: lib.rs
pasyn-sqlite-core/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
pasyn-sqlite-core/examples/: basic.rs
pasyn-sqlite-core/python/pasyn_sqlite_core/: __init__.py  __init__.pyi
pasyn-sqlite-core/sqlite-src/: sqlite3.h
pasyn-sqlite-core/src/: cache.rs  client.rs  connection.rs  error.rs  ffi.rs  lib.rs  protocol.rs  python.rs  reader_pool.rs  server.rs  statement.rs  value.rs
pasyn_sqlite/: __init__.py  connection.py  cursor.py  exceptions.py  pasyn_pool.py  pool.py  transactions.py
tests/: __init__.py  test_comprehensive_edge_cases.py  test_implementations.py  test_pasyn_pool.py  test_pasyn_sqlite.py  test_transaction_comprehensive.py  test_transaction_mutex.py
tools/: bench.py  build.py  clean.py  common.py  format.py  install.py  lint.py  test.py
