[package]
name = "pasyn-sqlite-core"
version = "0.1.0"
edition = "2021"
description = "SQLite bindings for pasyn - high-performance async SQLite with multiplexed writes"
license = "MIT"
repository = "https://github.com/pasyn/pasyn-sqlite"
keywords = ["sqlite", "database", "ffi", "python", "async"]
categories = ["database", "api-bindings"]

[lib]
name = "pasyn_sqlite_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["system"]
bundled = []  # Compile SQLite from source (requires sqlite3.c in sqlite-src/)
system = []   # Link to system SQLite (default)
python = ["dep:pyo3"]  # Enable Python bindings

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "basic"
path = "examples/basic.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
